--- a/.github/actions/prepare/action.yml
+++ b/.github/actions/prepare/action.yml
@@ -2,10 +2,10 @@ name: Prepare
 description: Prepares the repo for a typical CI job
 
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - uses: actions/setup-node@v3
       with:
-        node-version: "18"
+        node-version: '18'
     - run: npm install
       shell: bash
